Changes for issue #649 - Update OboOntology, OboOntologyParser and OboOntologyTerm to parse and implement 'consider' as a replacement for 'replaced_by' in obsolete classes. Alter AltToCurrentId class to become a record.